--- a/config.yaml
+++ b/config.yaml
@@ -3,12 +3,12 @@
 # RTSP Stream Configuration
 stream:
   rtsp_url: "${RTSP_URL}"  # Override with env var
-  target_fps: 30  # Match video source FPS
+  target_fps: 15  # Match heavy model processing speed
   reconnect_delay: 5
 
 # Detection Configuration
 detection:
-  model_complexity: 0  # 0=lite (fastest), 1=full, 2=heavy
+  model_complexity: 2  # 0=lite (fastest), 1=full (balanced), 2=heavy (most accurate)
   min_detection_confidence: 0.5
   min_tracking_confidence: 0.5
   jump_threshold_ratio: 0.12  # 12% of baseline = jump
