--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,6 +38,8 @@ services:
     restart: unless-stopped
     ports:
       - "8080:8080"
+    volumes:
+      - ./logs:/app/logs
     environment:
       - RTSP_URL=${RTSP_URL}
       - WEBHOOK_URL=${WEBHOOK_URL}
@@ -73,10 +75,62 @@ services:
       - test-ffmpeg
     ports:
       - "8081:8080"
+    volumes:
+      - ./logs:/app/logs
+      - ./src:/app/src:ro  # Hot reload: mount source code
     environment:
       - RTSP_URL=rtsp://test-stream:8554/live
       - WEBHOOK_URL=${WEBHOOK_URL:-}
       - MILESTONE_INTERVAL=${MILESTONE_INTERVAL:-100}
       - TZ=${TZ:-Europe/Amsterdam}
+    command: ["python", "-m", "uvicorn", "src.api.app:app", "--host", "0.0.0.0", "--port", "8080", "--reload", "--reload-dir", "/app/src"]
     profiles:
       - test
+
+  # Single-run test with 24-jump video (no loop)
+  test-stream-24:
+    image: bluenviron/mediamtx:latest
+    container_name: test-stream-24
+    ports:
+      - "8555:8554"
+    volumes:
+      - ./camera-stream-24.mp4:/video.mp4:ro
+      - ./mediamtx.yml:/mediamtx.yml:ro
+    profiles:
+      - test24
+
+  test-ffmpeg-24:
+    image: linuxserver/ffmpeg:latest
+    container_name: test-ffmpeg-24
+    depends_on:
+      - test-stream-24
+    volumes:
+      - ./camera-stream-24.mp4:/video.mp4:ro
+    entrypoint: ["/bin/sh", "-c"]
+    command:
+      - |
+        sleep 3
+        ffmpeg -re -i /video.mp4 -c copy -f rtsp rtsp://test-stream-24:8554/live
+        echo "Video finished"
+        sleep 999999
+    profiles:
+      - test24
+
+  rope-counter-test-24:
+    build: .
+    image: rope-skipping-counter:latest
+    container_name: rope-counter-test-24
+    depends_on:
+      - test-stream-24
+      - test-ffmpeg-24
+    ports:
+      - "8082:8080"
+    volumes:
+      - ./logs:/app/logs
+    environment:
+      - RTSP_URL=rtsp://test-stream-24:8554/live
+      - WEBHOOK_URL=${WEBHOOK_URL:-}
+      - MILESTONE_INTERVAL=${MILESTONE_INTERVAL:-100}
+      - TZ=${TZ:-Europe/Amsterdam}
+    profiles:
+      - test24
