switched to yolo model

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ uvicorn[standard]==0.34.0
 
 # Computer Vision
 opencv-python-headless==4.10.0.84
-mediapipe==0.10.20
+ultralytics>=8.0.0
 
 # Async HTTP
 aiohttp==3.11.11
