--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # Rope Skipping Counter Configuration
 
-# RTSP stream URL from your Unifi camera (required)
-RTSP_URL=rtsp://user:password@192.168.1.100:554/stream1
+# RTSP stream URL from your camera (required)
+RTSP_URL=rtsp://user:pass@camera-ip:554/stream
 
 # Home Assistant webhook URL for milestone notifications (required)
-WEBHOOK_URL=http://homeassistant.local:8123/api/webhook/rope-skip-milestone
+WEBHOOK_URL=http://homeassistant.local:8123/api/webhook/your-webhook-id
 
 # Announce every N skips (default: 100)
 MILESTONE_INTERVAL=100
